"Replaced GitHub Actions configuration with Maven POM file"

--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,29 @@
-name: Java CI with Maven
-on:
-push:
-branches: [ main ]
-pull_request:
-branches: [ main ]
-jobs:
-build:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout repository
-uses: actions/checkout@v4
-- name: Set up JDK 17
-uses: actions/setup-java@v4
-with:
-distribution: 'temurin'
-java-version: '21'
-# Specify the directory where your pom.xml is located (if not in the root)
-- name: Build with Maven
-run: mvn -f pom.xml clean install
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.example</groupId>
+    <artifactId>calculator</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
+    <build>
+        <plugins>
+            <!-- Compiler plugin to specify the Java version -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
